# json_schema_tools_rs

./: LICENSE  README.md
workspace/: Cargo.toml
workspace/dereference_json_schema/: Cargo.toml
workspace/dereference_json_schema/src/: lib.rs
workspace/generators/rust_model_generator/: Cargo.toml
workspace/generators/rust_model_generator/src/: lib.rs
workspace/model_generators/rust_serde_generator/src/: lib.rs
workspace/schema_discovery/: Cargo.toml
workspace/schema_discovery/src/: lib.rs
workspace/schema_registry/: Cargo.toml
workspace/schema_registry/src/: lib.rs
workspace/serde_json_schema/: Cargo.toml
workspace/serde_json_schema/src/: lib.rs
