[package]
name = "rust_model_generator"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json_schema = { path = "../../serde_json_schema" }
schema_registry = { path = "../../schema_registry" }
quote = "1.0.38"
anyhow = "1.0.95"
proc-macro2 = "1.0.92"
syn = "2.0.92"
prettyplease = "0.2.25"

[dev-dependencies]
serde_json = "1.0"
